# knowledge-management

./: NOTES_SYSTEM_GUIDE.md  PROGRESS_TRACKING_GUIDE.md  README.md  demo_populate_knowledge.py  setup.md
backend/: .gitignore  CONCURRENCY_IMPROVEMENTS.md  GRAPH_OPTIMIZATION_GUIDE.md  HASH_SYSTEM_GUIDE.md  OBSIDIAN_LINK_FIXES.md  OPENROUTER_GUIDE.md  README.md  SMOLAGENTS_BEST_PRACTICES.md  SMOLAGENTS_UPGRADE.md  SYNC_ENDPOINT_USAGE.md  __init__.py  debug_cache_stats.py  demo_directory_structure.py  dev.py  main.py  pyproject.toml  run.py  test_notes_system.py  test_obsidian_links.py  test_openai_embeddings.py  test_optimized_graph.py  test_setup.py  test_sync_endpoint.py
backend/agent/: action_reporter.py  knowledge_agent.py  knowledge_tools.py
backend/knowledge/: __init__.py  categorizer.py  content_processor.py  embedding_service.py  enhanced_knowledge_graph.py  file_watcher.py  hash_utils.py  knowledge_graph.py  markdown_parser.py  notes_manager.py
backend/learning/: README.md
backend/models/: chat_models.py
backend/test_scripts/: README.md  TESTING_GUIDE.md  __init__.py  simple_agent_chat.py  test_agent_conversations.py  test_anthropic_integration.py  test_chat_endpoint.py  test_concurrent_requests.py  test_directory_structure.py  test_hash_system.py  test_openrouter_integration.py  test_server_request.py  test_setup.py  test_smolagents_best_practices.py  test_smolagents_integration.py  test_sync_cleanup.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
src/: App.tsx
src/components/: KnowledgeGraph.tsx
