[project]
name = "knowledge-management-backend"
version = "2.0.0"
description = "AI-powered knowledge management backend using smolagents"
authors = [{name = "Knowledge Management Team"}]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.5.0",
    "smolagents[toolkit,litellm]>=1.0.0",
    "chromadb>=0.4.18",
    "networkx>=3.2.1",
    "scikit-learn>=1.3.2",
    "sentence-transformers>=2.2.2",
    "openai>=1.6.0",
    "anthropic>=0.20.0",
    "litellm>=1.20.0",
    "watchdog>=3.0.0",
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "agent",
    "knowledge", 
    "models",
    "test_scripts",
    "learning"
]

[tool.hatch.build.targets.wheel.sources]
"agent" = "agent"
"knowledge" = "knowledge"
"models" = "models"
"test_scripts" = "test_scripts"
"learning" = "learning"

[tool.hatch.build.targets.wheel.force-include]
"main.py" = "main.py"
"run.py" = "run.py"
"__init__.py" = "__init__.py"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"] 
